fix: use scrollbar-gutter stable to prevent page contents and fixed topbar from shifting

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -394,10 +394,11 @@
 
 /* ── Prevent Radix UI scrollbar layout shifting ── */
 html {
-  overflow-y: scroll !important;
+  scrollbar-gutter: stable;
 }
 
 body {
   padding-right: 0px !important;
+  margin-right: 0px !important;
 }
 
